--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 firebase-admin-setup/serviceAccountKey.json
 firebase-admin-setup/node_modules/
 firebase-admin-setup/package-lock.json
+functions/node_modules/
+functions/package-lock.json
 
 # Node modules
 node_modules/
